# grpc-translate-service

./: Cargo.toml  README.md  build.rs
src/: client.rs  server.rs
src/protos/: language.proto  mod.rs
